I'm done with this

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       Create Notes
     </button>
     <div class="notes">
-      <!-- <p contenteditable="true" class="input-box">
+      <!-- <P contenteditable="true" class="input-box">
         <img src="img/delete-removebg-preview.png">
-      </p> -->
+      </P> -->
     </div>
   </div>
 
